--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "src/**/*.{js,ts,tsx}": [
+      "npm run format"
+    ]
+  },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
