--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "docker:up": "docker compose -f docker-compose-test.yml up -d && sleep 5",
+    "docker:down": "docker compose -f docker-compose-test.yml down -v",
+    "test": "npm run docker:up && npm run test:migrate:deploy && jest && npm run test:e2e && npm run docker:down",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "test:migrate:deploy": "export DATABASE_URL=$(grep DATABASE_URL .env.test | cut -d '=' -f2-) && npx prisma migrate deploy",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky install"
@@ -29,6 +32,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.18.0",
+    "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
