--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "docker:up": "docker compose -f docker-compose-test.yml up -d && sleep 5",
     "docker:down": "docker compose -f docker-compose-test.yml down -v",
-    "test": "npm run docker:up && npm run test:migrate:deploy && jest && npm run test:e2e && npm run docker:down",
+    "test": "npm run docker:up && npm run test:migrate:deploy && jest && (npm run test:e2e || npm run docker:down)  && npm run docker:down",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:migrate:deploy": "export DATABASE_URL=$(grep DATABASE_URL .env.test | cut -d '=' -f2-) && npx prisma migrate deploy",
@@ -31,8 +31,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.18.0",
+    "jest-mock-extended": "^3.0.7",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
