--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "docker:up": "docker compose -f docker-compose-test.yml up -d && sleep 5",
     "docker:down": "docker compose -f docker-compose-test.yml down -v",
-    "test": "npm run docker:up && npm run test:migrate:deploy && jest && (npm run test:e2e || npm run docker:down)  && npm run docker:down",
+    "test": "jest && npm run docker:up && npm run test:migrate:deploy  && (npm run test:e2e || npm run docker:down)  && npm run docker:down",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:migrate:deploy": "export DATABASE_URL=$(grep DATABASE_URL .env.test | cut -d '=' -f2-) && npx prisma migrate deploy",
