--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -10,6 +10,6 @@ services:
     ports:
       - '5433:5432'
     environment:
-      POSTGRES_USER: prisma
-      POSTGRES_PASSWORD: prisma
-      POSTGRES_DB: tests
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: test_db
