--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:migrate:deploy": "export DATABASE_URL=$(grep DATABASE_URL .env.test | cut -d '=' -f2-) && npx prisma migrate deploy",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "husky install && chmod +x .husky/pre-commit"
   },
   "lint-staged": {
     "src/**/*.{js,ts,tsx}": [
