--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,tsx}": [
-      "npm run format"
+      "npm run format",
+      "npm run lint"
     ]
   },
   "dependencies": {
